Images now show loading note when being loaded, slightly fixed image shifting when loading images

--- a/src/styles/components/images.css
+++ b/src/styles/components/images.css
@@ -1,6 +1,21 @@
 .image-container {
   position: relative;
   width: 100%;
+  min-height: 240px; /* reserves space while loading */
+}
+
+.image-skeleton {
+  color: var(--color-foreground-default-subtle);
+  font-size: var(--font-size-xs);
+  position: absolute;
+}
+
+.image[data-loaded="false"] {
+  opacity: 0;
+}
+
+.image[data-loaded="true"] {
+  opacity: 1;
 }
 
 .image {
